--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Montserrat" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/style2.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
-    <title>Hello World</title>
+    <title>Hello, it's me</title>
   </head>
   <body>
     <div class="wrapper">
     <div class="container">
       <header>
-        <h1 class="name">jlord</h1>
+        <h1 class="name">Tonomoshia</h1>
       </header>
       <article>
-        <p>I'm an <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">open source</a> developer and designer living in Oakland, California. Far, far away from my <a href="http://en.wikipedia.org/wiki/Central_Georgia" target="_blank">East Coast US roots</a>. I work at <a href="http://www.github.com/about" target="_blank">GitHub</a>, mentor at programming events (<a href="http://www.nodeschool.io">NodeSchool.io</a>, <a href="https://github.com/blog/1805-patchwork-night" target="_blank">Patchwork</a>) and do some conferences, too.</p>
-        <p> Previously I was an <a href="http://www.bostonredevelopmentauthority.org" target="_blank">urban designer</a>, but the call of the wild open tech world would win me over.</p>
+        <p>I'm a freelance  <a href="https://en.wikipedia.org/wiki/Web_developer" target="_blank">web developer</a> living in <a href="Fort Lauderdale" target="_blank">Fort Lauderdale, Florida</a>.
+        I work with HTML, CSS, PHP, Javascript and WordPress to create beautiful, functional websites. I am also a <a href="https://www.scrumalliance.org/profiles/607072-elizabeth-reiher" target="_blank">Certified Scrum Master</a> and I love working with and improving teams. 
+
+        <p> Previously I was a <a href="https://en.wikipedia.org/wiki/Paralegal" target="_blank">paralegal</a>, but the call of the wild open tech world won me over.</p>
       </article>
 
     <footer>
       <ul class="meta inline-list">
-        <li><a href="mailto:to.jlord@gmail.com">to.jlord@gmail.com</a></li>
-        <li><a href="http://www.twitter.com/jllord" target="_blank">twitter/jllord</a></li>
-        <li><a href="http://www.github.com/jlord" target="_blank">github/jlord</a></li>
+        <li><a href="mailto:to.tonomoshia@gmail.com">tonomoshia@gmail.com</a></li>
+        <li><a href="http://www.twitter.com/tonomoshia" target="_blank">twitter/tonomoshia</a></li>
+        <li><a href="http://www.github.com/tonomoshia" target="_blank">github/tonomoshia</a></li>
       </ul>
     </footer>
   </div>
