fixed link for Fort Lauderdale

--- a/index.html
+++ b/index.html
@@ -9,25 +9,23 @@
   </head>
   <body>
     <div class="wrapper">
-    <div class="container">
-      <header>
-        <h1 class="name">Tonomoshia</h1>
-      </header>
-      <article>
-        <p>I'm a freelance  <a href="https://en.wikipedia.org/wiki/Web_developer" target="_blank">web developer</a> living in <a href="Fort Lauderdale" target="_blank">Fort Lauderdale, Florida</a>.
-        I work with HTML, CSS, PHP, Javascript and WordPress to create beautiful, functional websites. I am also a <a href="https://www.scrumalliance.org/profiles/607072-elizabeth-reiher" target="_blank">Certified Scrum Master</a> and I love working with and improving teams. 
-
-        <p> Previously I was a <a href="https://en.wikipedia.org/wiki/Paralegal" target="_blank">paralegal</a>, but the call of the wild open tech world won me over.</p>
-      </article>
-
-    <footer>
-      <ul class="meta inline-list">
-        <li><a href="mailto:to.tonomoshia@gmail.com">tonomoshia@gmail.com</a></li>
-        <li><a href="http://www.twitter.com/tonomoshia" target="_blank">twitter/tonomoshia</a></li>
-        <li><a href="http://www.github.com/tonomoshia" target="_blank">github/tonomoshia</a></li>
-      </ul>
-    </footer>
-  </div>
-  </div>
+      <div class="container">
+        <header>
+          <h1 class="name">Tonomoshia</h1>
+        </header>
+        <article>
+          <p>I'm a freelance  <a href="https://en.wikipedia.org/wiki/Web_developer" target="_blank">web developer</a> living in <a href="https://en.wikipedia.org/wiki/Fort_Lauderdale,_Florida" target="_blank">Fort Lauderdale, Florida</a>.
+          I work with HTML, CSS, PHP, Javascript and WordPress to create beautiful, functional websites. I am also a <a href="https://www.scrumalliance.org/profiles/607072-elizabeth-reiher" target="_blank">Certified Scrum Master</a> and I love working with and improving teams.
+          <p> Previously I was a <a href="https://en.wikipedia.org/wiki/Paralegal" target="_blank">paralegal</a>, but the call of the wild open tech world won me over.</p>
+        </article>
+        <footer>
+          <ul class="meta inline-list">
+            <li><a href="mailto:to.tonomoshia@gmail.com">tonomoshia@gmail.com</a></li>
+            <li><a href="http://www.twitter.com/tonomoshia" target="_blank">twitter/tonomoshia</a></li>
+            <li><a href="http://www.github.com/tonomoshia" target="_blank">github/tonomoshia</a></li>
+          </ul>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
