changed style sheet

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <title>Hello, it's me</title>
   </head>
-  <body>
+  <body>''
     <div class="wrapper">
       <div class="container">
         <header>
