commented out bootstrap temporarily

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Montserrat" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/style2.css">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <title>Hello, it's me</title>
   </head>
@@ -15,9 +15,9 @@
           <h1 class="name">Tonomoshia</h1>
         </header>
         <article>
-          <p>I'm a freelance  <a href="https://en.wikipedia.org/wiki/Web_developer" target="_blank">web developer</a> living in <a href="https://en.wikipedia.org/wiki/Fort_Lauderdale,_Florida" target="_blank">Fort Lauderdale, Florida</a>.
+          <p class="lead">I'm a freelance  <a href="https://en.wikipedia.org/wiki/Web_developer" target="_blank">web developer</a> living in <a href="https://en.wikipedia.org/wiki/Fort_Lauderdale,_Florida" target="_blank">Fort Lauderdale, Florida</a>.
           I work with HTML, CSS, PHP, Javascript and WordPress to create beautiful, functional websites. I am also a <a href="https://www.scrumalliance.org/profiles/607072-elizabeth-reiher" target="_blank">Certified Scrum Master</a> and I love working with and improving teams.
-          <p> Previously I was a <a href="https://en.wikipedia.org/wiki/Paralegal" target="_blank">paralegal</a>, but the call of the wild open tech world won me over.</p>
+          <p class="lead"> Previously I was a <a href="https://en.wikipedia.org/wiki/Paralegal" target="_blank">paralegal</a>, but the call of the wild open tech world won me over.</p>
         </article>
         <footer>
           <ul class="meta inline-list">
